--- a/register.html
+++ b/register.html
@@ -40,10 +40,12 @@
     <h2 data-th="สร้างรายได้จากที่บ้าน" data-en="Earn Money from Home">สร้างรายได้จากที่บ้าน</h2>
     <p data-th="สมัครเป็นพี่เลี้ยง กำหนดราคาและเวลาเองได้" data-en="Become a sitter. Set your own rates & schedule.">สมัครเป็นพี่เลี้ยง กำหนดราคาและเวลาเองได้</p>
     
-    <button class="btn-social btn-line" onclick="alert('เชื่อมต่อ LINE Login...')">
+<a href="2008873687-FSXDQJEA" style="text-decoration: none; width: 100%;">
+    <button class="btn-social btn-line">
         <i class="fab fa-line" style="font-size: 1.5rem;"></i> 
         <span data-th="สมัครด้วย LINE" data-en="Continue with LINE">สมัครด้วย LINE</span>
     </button>
+</a>
     
     <button class="btn-social btn-email" onclick="alert('เปิดฟอร์ม Email...')">
         <i class="fas fa-envelope"></i> 
