--- a/register.html
+++ b/register.html
@@ -43,7 +43,7 @@
     <a href="https://liff.line.me/2008873687-FSXDQJEA" style="text-decoration: none; width: 100%;">
         <button class="btn-social btn-line">
             <i class="fab fa-line" style="font-size: 1.5rem;"></i> 
-            <span data-th="สมัครด้วย LINE" data-en="Continue with LINE">สมัครด้วย LINE</span>
+            <span data-th="เข้าสู่ระบบด้วย LINE" data-en="Log in with LINE">เข้าสู่ระบบด้วย LINE</span>
         </button>
     </a>
     
