--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@300;400;500;600&display=swap" rel="stylesheet">
     <style>
         :root { --primary: #FF9F1C; --secondary: #2EC4B6; --dark: #2B2D42; --light: #F8F9FA; }
-        body { font-family: 'Kanit', sans-serif; margin: 0; background: var(--light); color: var(--dark); }
+        body { font-family: 'Kanit', sans-serif; margin: 0; background: var(--light); color: var(--dark); display: flex; flex-direction: column; min-height: 100vh; }
         a { text-decoration: none; color: inherit; transition: 0.3s; }
         
         /* Navbar */
@@ -25,12 +25,13 @@
         .btn-reg { background: var(--dark); color: white; padding: 8px 20px; border-radius: 50px; }
         .hamburger { display: none; font-size: 1.5rem; cursor: pointer; }
 
-        /* Hero Section */
+        /* Hero Section (ปรับให้ขยายเต็มพื้นที่ที่เหลือ) */
         .hero {
             background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('https://images.unsplash.com/photo-1548199973-03cce0bbc87b?ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80');
-            background-size: cover; background-position: center; min-height: 80vh; 
+            background-size: cover; background-position: center; 
+            flex: 1; /* ดัน Footer ลงล่างสุดเสมอ */
             display: flex; flex-direction: column; justify-content: center; align-items: center; 
-            color: white; text-align: center; padding: 20px;
+            color: white; text-align: center; padding: 20px; min-height: 80vh;
         }
         .hero h1 { font-size: 3.5rem; margin-bottom: 10px; text-shadow: 2px 2px 10px rgba(0,0,0,0.5); }
         .hero p { font-size: 1.2rem; margin-bottom: 30px; text-shadow: 1px 1px 5px rgba(0,0,0,0.5); }
@@ -50,6 +51,9 @@
             border-radius: 10px; font-family: 'Kanit'; cursor: pointer; font-size: 1.1rem; 
             flex: 0 0 auto; margin-top: auto; height: 48px; font-weight: 500;
         }
+
+        /* Footer (เพิ่มใหม่) */
+        footer { background: white; padding: 20px; text-align: center; color: #666; font-size: 0.9rem; border-top: 1px solid #eee; }
 
         /* Responsive */
         @media (max-width: 768px) {
@@ -97,6 +101,15 @@
         <button class="btn-search" onclick="window.location.href='search.html'" data-th="ค้นหาเลย" data-en="Search Now">ค้นหาเลย</button>
     </div>
 </div>
+
+<footer>
+    <p>© 2026 PetPuan Thailand. All rights reserved.</p>
+    <div style="margin-top: 10px; font-size: 1.2rem;">
+        <i class="fab fa-facebook" style="margin: 0 10px; cursor: pointer; color: #1877F2;"></i>
+        <i class="fab fa-line" style="margin: 0 10px; cursor: pointer; color: #06C755;"></i>
+        <i class="fab fa-instagram" style="margin: 0 10px; cursor: pointer; color: #E1306C;"></i>
+    </div>
+</footer>
 
 <script>
     let isTH = true;
